# Pier

./: .dockerignore  .gitignore  CLA-corporate.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  SECURITY-AUDIT.md  TODO.md  TRADEMARK.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: sponsor.yml
.github/workflows/: release.yml
crates/pier-agent/: Cargo.toml
crates/pier-agent/src/: helper_client.rs  main.rs  shell.rs  tls.rs
crates/pier-core/: Cargo.toml  tailwind.config.js
crates/pier-core/assets/css/: tailwind.css
crates/pier-core/assets/locales/: de.toml  en.toml  es.toml  fr.toml  ja.toml  pt-BR.toml  ru.toml  zh-CN.toml
crates/pier-core/assets/static/: ansi-to-html.js  tailwind.css
crates/pier-core/assets/templates/: auth_base.html  base.html  canvas.html  cli_login.html  dashboard.html  login.html  setup.html
crates/pier-core/assets/templates/account/: security.html
crates/pier-core/assets/templates/audit/: index.html
crates/pier-core/assets/templates/compose/: editor.html  list.html
crates/pier-core/assets/templates/containers/: detail.html  list.html
crates/pier-core/assets/templates/domains/: list.html
crates/pier-core/assets/templates/images/: list.html
crates/pier-core/assets/templates/invitations/: accept.html
crates/pier-core/assets/templates/networks/: list.html
crates/pier-core/assets/templates/partials/: catalog_info_modal.html  support_modal.html
crates/pier-core/assets/templates/peers/: detail.html  list.html
crates/pier-core/assets/templates/projects/: detail.html  list.html
crates/pier-core/assets/templates/proxy/: settings.html
crates/pier-core/assets/templates/registries/: index.html
crates/pier-core/assets/templates/resources/: catalog.html  create.html  detail.html
crates/pier-core/assets/templates/s3/: list.html
crates/pier-core/assets/templates/schedules/: list.html
crates/pier-core/assets/templates/servers/: detail.html  list.html
crates/pier-core/assets/templates/settings/: alerts.html  index.html  logs.html  notifications.html  registries.html  tokens.html  updates.html
crates/pier-core/assets/templates/sources/: detail.html  list.html
crates/pier-core/assets/templates/tasks/: list.html  run_detail.html
crates/pier-core/assets/templates/team/: index.html
crates/pier-core/locales/: en.yml  es.yml  zh-CN.yml
crates/pier-core/src/: config.rs  crypto.rs  crypto_recovery.rs  error.rs  main.rs  state.rs  timezone.rs
crates/pier-core/src/alerts/: evaluator.rs  hooks.rs  metrics.rs  mod.rs  types.rs
crates/pier-core/src/alerts/channels/: discord.rs  email.rs  mod.rs  slack.rs  telegram.rs
crates/pier-core/src/api/: account.rs  alerts.rs  audit.rs  auth.rs  backups.rs  canvas.rs  catalog.rs  compose.rs  containers.rs  databases.rs  db_browser.rs  db_nosql.rs  dependencies.rs  deployments.rs  domains.rs  env.rs  events.rs  federation.rs  federation_agent.rs  federation_tokens.rs  grants.rs  images.rs  install.rs  invitations.rs  migration.rs  mod.rs  network.rs  networks.rs  npm.rs  npm_web_login.rs  peer_mesh.rs  peers.rs  project_members.rs  projects.rs  promote.rs  proxy.rs  registries.rs  registry_admin.rs  registry_settings.rs  resources.rs  (+13 more)
crates/pier-core/src/auth/: api_token.rs  audit.rs  cookie.rs  federation.rs  handlers.rs  middleware.rs  mod.rs  partial_token.rs  password.rs  rotation.rs  server_token.rs  setup_token.rs  totp.rs
crates/pier-core/src/auth/rbac/: guards.rs  membership.rs  mod.rs  policy.rs  roles.rs
crates/pier-core/src/backup/: executor.rs  mod.rs  restore.rs  scheduler.rs
crates/pier-core/src/catalog/: cluster.rs  mod.rs
crates/pier-core/src/db/: mod.rs  models.rs  ports.rs  schema.rs
crates/pier-core/src/deploy/: build.rs  deps.rs  mod.rs  rollback.rs
crates/pier-core/src/docker/: auth.rs  cleanup.rs  compose.rs  compose_service.rs  containers.rs  events.rs  images.rs  logs.rs  mod.rs  port_sync.rs  recreate.rs
crates/pier-core/src/federation/: client.rs  mod.rs  sync.rs  write_client.rs
crates/pier-core/src/git/: github.rs  github_app.rs  gitlab.rs  mod.rs
crates/pier-core/src/i18n/: mod.rs
crates/pier-core/src/network/: address.rs  agent_client.rs  core_mesh.rs  mesh_call.rs  mod.rs  wireguard.rs
crates/pier-core/src/proxy/: config.rs  mod.rs  ssl_monitor.rs
crates/pier-core/src/registry/: db.rs  mod.rs  storage.rs  upstream.rs
crates/pier-core/src/s3/: bunny.rs  mod.rs
crates/pier-core/src/scheduler/: actions.rs  cron_utils.rs  mod.rs  runner.rs
crates/pier-core/src/tasks/: executor.rs  mod.rs  models.rs  recover.rs
crates/pier-core/src/tls/: mod.rs
crates/pier-core/src/ui/: i18n.rs  mod.rs  pages.rs  templates.rs
crates/pier-net-helper/: Cargo.toml
crates/pier-net-helper/src/: main.rs  protocol.rs
crates/pier-tests/: Cargo.toml
crates/pier-tests/src/: bootstrap.rs  fixture.rs  main.rs  pier_runner.rs  report.rs  scenario.rs
crates/pier-tests/src/clients/: bun.rs  mod.rs  npm.rs  pnpm.rs  yarn.rs
crates/pier-tests/src/scenarios/: install.rs  mod.rs  mutations.rs  packument.rs  ping.rs  publish.rs  tarball.rs  whoami.rs
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.pt-BR.md  README.ru.md  README.zh-CN.md
scripts/: SCRIPTS.md  bootstrap.sh  build-bundle.sh  build-from-source.sh  install.sh  lib-swap.sh  pier-net-helper.service  pier.env.example  pier.service  setup.sh  test-vps-bootstrap.sh
templates/applications/: docker-compose.toml  docker-image.toml  dockerfile.toml  railpack.toml
templates/databases/: cassandra.toml  clickhouse.toml  mariadb.toml  mongodb.toml  mysql.toml  postgis.toml  postgresql.toml  redis.toml  scylladb.toml  timescaledb.toml  valkey.toml
templates/git/: private-repository-deploy-key.toml  private-repository-github-app.toml  public-repository.toml
templates/services/: amneziawg.toml  audiobookshelf.toml  beszel.toml  directus-postgresql.toml  directus.toml  elasticsearch-kibana.toml  elasticsearch.toml  gitea-postgresql.toml  gitea.toml  gotify.toml  grafana-postgresql.toml  grafana.toml  matrix-synapse-postgresql.toml  qdrant.toml  (+7 more)
