[workspace]
resolver = "2"
members = [
    "crates/pier-core",
    "crates/pier-agent",
    "crates/pier-net-helper",
    "crates/pier-tests",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/joveptesg/pier"
rust-version = "1.93"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }

# HTTP / API
axum = { version = "0.8.8", features = ["ws", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace", "compression-gzip"] }
tower_governor = "0.8"

# Docker
bollard = "0.20.1"

# Database
rusqlite = { version = "0.38", features = ["bundled", "backup"] }

# Native SQL drivers for the in-panel database browser + SQL runner (Postgres
# and MySQL/MariaDB). The `any` driver is intentionally NOT used: it pulls
# sqlx-sqlite, whose libsqlite3-sys collides with the one rusqlite links.
# No TLS backend — the panel only ever dials the co-located DB container on
# 127.0.0.1, so we connect with sslmode=disable and keep the binary lean.
# Pulled in by pier-core only, behind its `db-browser` feature.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "mysql"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# System metrics
sysinfo = "0.38.3"

# Templates & UI
minijinja = { version = "2.19", features = ["loader", "json"] }
rust-embed = { version = "8.11", features = ["compression"] }

# Auth & Crypto
bcrypt = "0.19"
rand = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
zxcvbn = "3.1"

# TLS (admin panel)
rustls = "0.23"
rustls-pemfile = "2.2"
rcgen = "0.14"

# Streaming
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Axum extras
axum-extra = { version = "0.12", features = ["cookie"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }

# S3
aws-sdk-s3 = "1.82"
aws-config = "1.6"
aws-credential-types = "1.2"

# Cron
cron = "0.15"

# JWT
jsonwebtoken = "9"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Crypto (webhook signature verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Tar archive (Docker build context)
tar = "0.4"

# Gzip (backup compression)
flate2 = "1"

# Temp dirs (scoped ~/.docker/config.json for registry auth)
tempfile = "3"

# HTTP body (Docker build context)
bytes = "1"
http-body-util = "0.1"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"

# Email (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# 2FA (TOTP) — generates and validates RFC 6238 codes for second-factor login.
# `otpauth` feature enables the issuer/account-aware constructor and `get_url()`
# helper we use to build authenticator-app URIs.
totp-rs = { version = "5.7", features = ["otpauth"] }

# QR code rendering (SVG, no image deps) — used to render the otpauth:// URL
# during 2FA enrollment so the operator can scan with an authenticator app.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Markdown → HTML for npm package README rendering in the UI.
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
# HTML sanitiser — strips <script>/onerror etc from rendered READMEs so a
# malicious publish can't XSS the panel.
ammonia = "4"

# CLI argument parsing (only used by pier-tests harness).
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Для сборки на машинах с < 3 ГБ RAM. Бинарь чуть жирнее и медленнее на горячем
# пути, но rustc-пик памяти падает в разы (без LTO + 16 codegen-units).
[profile.release-lowmem]
inherits = "release"
lto = false
codegen-units = 16
