[package]
name = "pier-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pier — remote server agent for monitoring and Docker operations"

[[bin]]
name = "pier-agent"
path = "src/main.rs"

[dependencies]
# Async
tokio = { workspace = true }

# HTTP / API
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# TLS — the agent serves HTTPS with a self-signed cert; core pins its
# leaf-cert SHA-256 fingerprint (no PKI chain/hostname validation).
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }

# Docker
bollard = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System metrics
sysinfo = { workspace = true }

# Streaming
futures-util = { workspace = true }

# Random — used only to mint helper-request ids so concurrent calls
# don't collide in pier-net-helper's logs.
rand = { workspace = true }

# Hex encoding — shell-run ids and similar opaque tokens.
hex = { workspace = true }
