[package]
name = "pier-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pier — lightweight self-hosted PaaS core server"

[[bin]]
name = "pier"
path = "src/main.rs"

[dependencies]
# Async
tokio = { workspace = true }

# HTTP / API
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }

# Docker
bollard = { workspace = true }

# Database
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System metrics
sysinfo = { workspace = true }

# Templates & UI
minijinja = { workspace = true }
rust-embed = { workspace = true }

# Auth & Crypto
bcrypt = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
zxcvbn = { workspace = true }

# TLS (admin panel)
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

# Streaming
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Axum extras
axum-extra = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# S3
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }

# Cron
cron = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# URL handling
url = { workspace = true }
urlencoding = { workspace = true }

# Crypto (webhook signature verification)
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Tar archive (Docker build context)
tar = { workspace = true }

# Gzip (backup compression)
flate2 = { workspace = true }

# Temp dirs (scoped registry auth for docker compose CLI)
tempfile = { workspace = true }

# HTTP body (Docker build context)
bytes = { workspace = true }
http-body-util = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
indexmap = { version = "2.14.0", features = ["serde"] }

# Email
lettre = { workspace = true }

# 2FA (TOTP)
totp-rs = { workspace = true }
qrcode = { workspace = true }
