[package]
name = "pier-net-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pier — privileged network helper (WireGuard mesh setup on the host)"

[[bin]]
name = "pier-net-helper"
path = "src/main.rs"

# The helper is Linux-only by design: it talks to `wg`, `wg-quick`,
# `systemctl`, and a unix-socket. The crate still compiles on Windows
# (so workspace `cargo check` works on a Windows dev machine) but the
# binary exits with a friendly error if run there.
[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
